--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ img {
 
 html {
   box-sizing: border-box;
+  min-width: 1280px;
 }
 
 *, *::before, *::after {
@@ -22,9 +23,14 @@ body {
 
 .container {
   background-color: #fefefe;
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .hotels-page {
+  min-width: 1200px;
+  height: 993px;
   color: #000000;
   background-color: #fefefe;
 }
@@ -33,14 +39,14 @@ a {
   text-decoration: none;
 }
 
+.main-header {
+  margin: 0px 40px;
+  min-height: 71px;
+}
+
 .main-navigation {
-  display: flex;
-  margin-bottom: 61px;
-  margin: 0;
-  padding: 0;
   font-weight: 700;
   background-color: #ffffff;
-  min-height: 71px;
 }
 
 .header-logo {
@@ -48,25 +54,30 @@ a {
   height: 71px;
 }
 
+.main-navigation-wrapper {
+  width: 100%;
+}
+
 .site-navigation {
-  align-self: center;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  height: 56px;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0px;
+  padding: 0px 70px;
   list-style: none;
-  min-height: 56px;
 }
 
 .navigation-left-half {
   display: flex;
   justify-content: space-between;
-  width: 328px;
+  min-width: 330px;
 }
 
 .navigation-right-half {
   display: flex;
   justify-content: space-between;
-  width: 328px;
-  order: 1;
+  min-width: 330px;
 }
 
 .site-navigation a {
@@ -104,12 +115,20 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
+.container {
+  min-width: 1200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .welcome-block {
-  margin: 0;
-  padding: 0;
+  min-width: 1200px;
+  height: 510px;
+  margin: 0px;
+  padding: 0px;
   text-align: center;
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   background-image: url("../img/polygon.svg"), url("../img/background-photo.jpg");
   background-repeat: no-repeat, no-repeat;
   background-size: 1200px auto, 1200px 773px;
@@ -117,17 +136,143 @@ input[type="radio"].visually-hidden {
 }
 
 .sedona-town {
+  min-width: 450px;
+  text-wrap: wrap;
+  margin-top: 200px;
   font-size: 21px;
   font-weight: 700;
   color: #000000;
 }
 
+.fetures-intro {
+  min-width: 500px;
+  margin-top: 0px;
+  text-wrap: wrap;
+}
+
+.features {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 1100px;
+  min-width: 1200px;
+  margin-top: 210px;
+  margin-left: -40px;
+}
+
+.features-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.feature-1 {
+  background-color: #81b3d2;
+  color: #ffffff;
+  width: 1200px;
+  height: 255px;
+  background-image: url("../img/feature-1.jpg");
+  background-repeat: no-repeat;
+  background-size: 800px 260px;
+  background-position: center right;
+}
+
+.advice {
+  width: 400px;
+  height: 330px;
+}
+
+.feature-2 {
+  background-color: #81b3d2;
+  text-align: right;
+  color: #ffffff;
+  width: 1200px;
+  height: 255px;
+  background-image: url("../img/feature-2.jpg");
+  background-repeat: no-repeat;
+  background-size: 800px 260px;
+  background-position: center left;
+}
+
+.feature-3,
+.feature-4,
+.feature-5 {
+  background-color: #eeeeee;
+  width: 400px;
+  height: 255px;
+  text-align: center;
+  text-wrap: wrap;
+}
+
+.feature-1 h2,
+.feature-2 h2 {
+  color: #ffffff;
+  font-size: 21px;
+  line-height: 21px;
+  font-weight: 700;
+}
+
+.feature-1 span,
+.feature-2 span {
+  line-height: 21px;
+}
+
+.feature-1 p,
+.feature-2 p {
+  line-height: 21px;
+}
+
+.feature-3 h2,
+.feature-4 h2,
+.feature-5 h2 {
+  color: #000000;
+  font-size: 21px;
+  line-height: 21px;
+  font-weight: 700;
+}
+
+.feature-3 span,
+.feature-4 span,
+.feature-5 span {
+  line-height: 21px;
+}
+
+.feature-3 p,
+.feature-4 p,
+.feature-5 p {
+  line-height: 21px;
+}
+
+.advice-list {
+  background-color: #ffffff;
+  list-style: none;
+}
+
+.advice-name {
+  color: #000000;
+  font-size: 21px;
+  line-height: 21px;
+  font-weight: 700;
+}
+
+.advice-description {
+  line-height: 21px;
+}
+
 .booking {
+  display: flex;
+  width: auto;
+  margin-left: 40px;
+  margin-top: 0px;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   background-color: #ffffff;
 }
 
 .booking-heading {
+  width: 1200px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -139,12 +284,14 @@ input[type="radio"].visually-hidden {
 }
 
 .open-booking {
+  margin-bottom: 55px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
   color: #ffffff;
   text-align: center;
+  vertical-align: middle;
   text-transform: uppercase;
   background-color: #766357;
 }
@@ -159,10 +306,17 @@ input[type="radio"].visually-hidden {
 }
 
 .booking-fields {
+  display: flex;
+  flex-direction: column;
+  width: 575px;
+  height: 285px;
+  align-items: center;
   list-style: none;
 }
 
 .booking input {
+  height: 40px;
+  margin-bottom: 40px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 26px;
@@ -254,13 +408,39 @@ input[type="radio"].visually-hidden {
 }
 
 .filters {
+  display: flex;
+  width: 100%;
+  height: 220px;
   color: #ffffff;
   background-color: #81b3d2;
   background-image: url("../img/filter-background.jpg");
   background-position: top center;
   background-repeat: no-repeat;
-  background-size: 1200px 562px;
+  background-size: 1280px 562px;
+}
 
+.filters-wrapper {
+  display: flex;
+  height: 220px;
+}
+
+.filters-left {
+  display: flex;
+  width: 400px;
+  height: 220px;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.filters-right {
+  display: flex;
+  flex-direction: column;
+  margin-left: 340px;
+  margin-right: 70px;
+  width: 400px;
+  height: 220px;
+  justify-content: space-around;
+  align-items: stretch;
 }
 
 .filters fieldset {
@@ -274,6 +454,7 @@ input[type="radio"].visually-hidden {
 }
 
 .filters ul {
+  padding-left: 0px;
   list-style: none;
   line-height: 21px;
 }
@@ -296,22 +477,61 @@ input[type="radio"].visually-hidden {
   background-color: #ffffff;
 }
 
+.catalog {
+  width: 1200px;
+}
+
 .catalog ul {
   list-style: none;
+  padding: 0px;
+}
+
+.hotels-list {
+  display: flex;
+  flex-direction: column;
 }
 
 .hotels-item {
   border-top: 1px solid #e5e5e5;
+  display: flex;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 155px;
+  width: 1200px;
 }
 
 .hotels-item:last-child {
   border-bottom: 1px solid #e5e5e5;
 }
 
+.hotels-item-columns {
+  display: flex;
+  justify-content: space-between;
+  width: 1200px;
+  height: 95px;
+}
+
+.hotel-image {
+  height: 95px;
+  width: 135px;
+}
+
+.hotels-item-left {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 200px;
+}
+
 .hotel-name {
   color: #000000;
   font-size: 21px;
   font-weight: 700;
+}
+
+.hotel-description {
 }
 
 .hotel-name:hover {
@@ -331,6 +551,7 @@ input[type="radio"].visually-hidden {
   text-align: center;
   text-transform: uppercase;
   background-color: #81b3d2;
+  margin-right: 5px;
 }
 
 .details:hover {
@@ -362,6 +583,12 @@ input[type="radio"].visually-hidden {
   background-color: #503e33;
 }
 
+.hotels-item-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .rating {
   color: #666666;
   line-height: 21px;
@@ -373,6 +600,10 @@ input[type="radio"].visually-hidden {
 }
 
 .main-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 765px;
   color: #000000;
   background-color: rgba(255, 255, 255, 0.9);
 }
@@ -381,15 +612,21 @@ input[type="radio"].visually-hidden {
   color: #000000;
   font-size: 21px;
   font-weight: 700;
+  margin-left: 130px;
 }
 
 .footer-social {
+  display: flex;
   text-align: center;
+  align-items: center;
   list-style: none;
 }
 
 .social-button {
   display: block;
+  width: 55px;
+  height: 50px;
+  margin-right: 5px;
   font-size: 0px;
   background-size: 46px 48px;
   background-color: #81b3d2;
@@ -415,6 +652,7 @@ input[type="radio"].visually-hidden {
 
 .footer-copyright {
   text-align: right;
+  margin-right: 100px;
 }
 
 .footer-copyright span {
