--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,14 @@ body {
   width: 1200px;
   margin: 0 auto;
   padding: 0 0;
+  background-color: #ffffff;
+  box-shadow: 0 0 5px #dbdbdb
+}
+
+.index-container {
+  background-image: url("../img/map.jpg");
+  background-repeat: no-repeat;
+  background-position: center bottom;
 }
 
 .hotels-page {
@@ -47,7 +55,7 @@ a {
 
 .header-logo {
   position: absolute;
-  left: 740px;
+  left: 46%;
   width: 140px;
   height: 71px;
 }
@@ -63,7 +71,7 @@ a {
 }
 
 .site-navigation li {
-  min-width: 300px;
+  min-width: 320px;
 }
 
 .navigation-item-left {
@@ -126,8 +134,7 @@ input[type="radio"].visually-hidden {
 
 .about-sedona {
   background-color: #ffffff;
-  margin: 93px auto;
-  padding-top: 60px;
+  margin: 60px auto;
   background: #fff;
   max-width: 500px;
 }
@@ -135,12 +142,12 @@ input[type="radio"].visually-hidden {
 .sedona-town {
   font-size: 21px;
   font-weight: 700;
+  padding-top: 60px;
+  margin-bottom: 40px;
   color: #000000;
 }
 
 .fetures-intro {
-  padding-top: 43px;
-  padding-bottom: 60px;
 }
 
 .features {
@@ -244,18 +251,20 @@ input[type="radio"].visually-hidden {
 
 .booking {
   display: flex;
-  padding-top: 60px;
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+.booking-header {
+  min-width: 1200px;
   background-color: #ffffff;
-  background-image: url("../img/map.jpg");
-  background-repeat: no-repeat;
-  background-position: center 355px;
 }
 
 .booking-heading {
-  width: 1200px;
+  min-width: 1200px;
+  padding-top: 58px;
+  text-align: center;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -263,8 +272,9 @@ input[type="radio"].visually-hidden {
 }
 
 .booking-intro {
+  text-align: center;
   line-height: 24px;
-  margin-bottom: 55px;
+  padding-bottom: 55px;
 }
 
 .open-booking {
@@ -292,139 +302,124 @@ input[type="radio"].visually-hidden {
 }
 
 .booking-form {
+  width: 575px;
+  margin-bottom: 78px;
+  background-color: #ffffff;
+}
+
+.booking-form-hide {
+  display: none;
+}
+
+.booking-wrapper {
   display: flex;
   flex-wrap: wrap;
-  width: 576px;
+  width: 460px;
+  margin: 55px auto;
   background-color: #ffffff;
-  margin-bottom: 80px;
 }
 
-.booking-fields {
-  align-items: center;
-  list-style: none;
-  margin-top: 55px;
-}
-
-.field-name {
-  margin-left: 30px;
-}
-
-.booking input {
-  padding: 15px 10px 15px 10px;
+.booking-item {
+  display: flex;
+  width: 100%;
+  margin-top: 0;
   margin-bottom: 30px;
-  width: 315px;
+}
+
+.booking:last-child {
+  margin-bottom: 0px;
+}
+
+.booking-item label {
+  width: 117px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 26px;
   font-weight: 700;
+  color: #000000;
   text-transform: uppercase;
-  color: #000000;
+  text-align: left;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.booking-item .children {
+  margin-left: 53px;
+  width: 65px;
+}
+
+.booking-item input {
+  font-family: "PT Sans", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 28px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
   background-color: #f2f2f2;
-  border: 1px solid transparent;
+  width: 350px;
+  padding: 5px 15px;
 }
 
-.booking input::-moz-placeholder {
-  color: #000000;
+.booking-item .input-number {
+  width: 40px;
+  padding-left: 0;
+  text-align: center;
 }
 
-.booking input::-webkit-input-placeholder {
-  color: #000000;
-}
-
-.booking input:-ms-input-placeholder {
-  color: #000000;
-}
-
-.booking input::-ms-input-placeholder {
-  color: #000000;
-}
-
-.booking input::placeholder {
-  color: #000000;
-}
-
-.booking input:hover {
+.booking-item input:hover {
   background-color: #ebebeb;
 }
 
-.booking input:focus {
+.booking-item input:focus {
   background-color: #ffffff;
-  border: 1px solid #e5e5e5;
+  outline: 2px solid #e5e5e5;
+}
+
+.form-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f2f2f2;
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 38px;
+  vertical-align: bottom;
+  background-position: center;
+  padding: 0;
+  border: none;
+  outline: none;
+}
+
+.form-icon {
+  fill: #a9a9a9;
+}
+
+.form-icon:hover {
+  fill: #000000;
+}
+
+.form-icon:focus {
+  fill: #81b3d2;
 }
 
 .calendar {
-  font-size: 0px;
-  background-color: #f2f2f2;
-  width: 30px;
-  height: 60px;
-  background-image: url("../img/calendar.svg");
-  background-repeat: no-repeat;
-  background-size: 22px 22px;
-  border: none;
-  padding-top: 8px;
-  padding-right: 10px;
-  padding-bottom: 8px;
+  position: absolute;
+  right: 0;
+  background: none;
 }
 
-.calender:hover {
-  background-image: url("../img/calendar-hover.svg");
+.more:hover line,
+.less:hover line {
+  stroke: #000000;
 }
 
-.calendar:active {
-  background-image: url("../img/calendar-active.svg");
-}
-
-.less {
-  font-size: 0px;
-  width: 40px;
-  height: 60px;
-  background-color: #f2f2f2;
-  border: none;
-}
-
-.less::after {
-  content: "";
-  background-image: url("../img/less.svg");
-  background-repeat: no-repeat;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 13px;
-  padding-right: 13px;
-}
-
-.less:hover::after {
-  background-image: url("../img/less-hover.svg");
-}
-
-.less:active::after {
-  background-image: url("../img/less-active.svg")
-}
-
-.more {
-  font-size: 0px;
-  width: 40px;
-  height: 60px;
-  background-color: #f2f2f2;
-}
-
-.more::after {
-  content: "";
-  background-image: url("../img/more.svg");
-  background-repeat: no-repeat;
-  padding: 20px 13px;
-}
-
-.more:hover::after {
-  background-image: url("../img/more-hover.svg");
-}
-
-.more:active::after {
-  background-image: url("../img/more-active.svg")
+.more:focus line,
+.less:focus line {
+  stroke: #81b3d2;
 }
 
 .button-search {
   display: inline-block;
-  margin-left: 60px;
   margin-bottom: 55px;
   width: 460px;
   padding: 20px 195px;
@@ -462,12 +457,12 @@ input[type="radio"].visually-hidden {
   display: flex;
   width: 100%;
   padding-top: 35px;
+  padding-bottom: 35px;
 }
 
 .filter fieldset {
   padding: 0;
   margin: 0;
-  margin-bottom: 30px;
   border: none;
 }
 
@@ -640,10 +635,6 @@ input[type="radio"].visually-hidden {
   background: #ffffff;
 }
 
-.filters fieldset {
-  border: none;
-}
-
 .filters legend {
   font-size: 16px;
   line-height: 21px;
@@ -654,6 +645,77 @@ input[type="radio"].visually-hidden {
   padding: 0;
   list-style: none;
   line-height: 21px;
+}
+
+.filters-result {
+  display: flex;
+  padding-left: 73px;
+  padding-right: 73px;
+  padding-top: 30px;
+  align-items: center;
+}
+
+.found {
+  font-size: 21px;
+  font-weight: 700;
+  margin-right: 50px;
+}
+
+.sorting {
+  font-size: 12px;
+  margin-right: 40px;
+}
+
+.sorting-type {
+  font-size: 12px;
+  color: #b1b1b1;
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+}
+
+li .sorting-type {
+  border-bottom: 1px dashed #81b3d2;
+  margin-right: 33px;
+}
+
+.sorting-type:hover {
+  color: #81b3d2;
+}
+
+.sorting-type:active {
+  color: #000000;
+  border-bottom: none;
+}
+
+li .current-sorting {
+  color: #81b3d2;
+  border-bottom: none;
+}
+
+.filter-buttons {
+  margin-left: auto;
+}
+
+.filter-button {
+  border: none;
+  background: none;
+}
+
+.button-up {
+  fill: #cacaca;
+}
+
+.button-down {
+  fill: #81b3d2;
+}
+
+.filter-button:hover {
+  fill: #000000;
+}
+
+.filter-button:active {
+  fill: #81b3d2;
 }
 
 .catalog {
@@ -673,7 +735,6 @@ input[type="radio"].visually-hidden {
 .hotels-item {
   border-top: 1px solid #e5e5e5;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   padding: 30px 73px;
 }
@@ -691,13 +752,14 @@ input[type="radio"].visually-hidden {
 .hotels-item-info {
 }
 
-.hotel-information {
+.hotel-description {
 }
 
 .hotel-name {
   color: #000000;
   font-size: 21px;
   font-weight: 700;
+  margin: 0;
 }
 
 .hotel-name:hover {
@@ -708,9 +770,7 @@ input[type="radio"].visually-hidden {
   color: rgba(0, 0, 0, 0.3);
 }
 
-
-/* задать общий класс для кнопок */
-.details {
+.hotel-button {
   display: inline-block;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
@@ -719,8 +779,11 @@ input[type="radio"].visually-hidden {
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
-  background-color: #81b3d2;
   padding: 10px 15px;
+}
+
+.details {
+  background-color: #81b3d2;
 }
 
 .details:hover {
@@ -733,16 +796,7 @@ input[type="radio"].visually-hidden {
 }
 
 .book {
-  display: inline-block;
-  font-family: "PT Sans", Arial, sans-serif;
-  font-size: 14px;
-  line-height: 21px;
-  font-weight: 700;
-  color: #ffffff;
-  text-align: center;
-  text-transform: uppercase;
   background-color: #766357;
-  padding: 10px 15px;
 }
 
 .book:hover {
@@ -768,7 +822,6 @@ input[type="radio"].visually-hidden {
 
 .stars {
   text-align: right;
-  margin-top: 30px;
 }
 
 .main-footer {
